# aviutl_bridge_exe_sample

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
