[package]
name = "aviutl_bridge_exe_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "^0.12.0"
log = { version = "0.4", features = ["std", "serde"] }
encoding = {version = "0.2.33"}
# winapi = {version="0.3.9"}
file_mmap = {version = "0.19.3"}
bincode = {version = "1.3.3"}
serde = {version = "1.0.192", features = ["derive"]}
# win-sys={version = "*"}
windows = {version = "*", features = ["Win32", "Win32_System", "Win32_System_Memory", "Win32_Foundation"]}
# core-foundation = {version = "*"}