[package]
name = "aviutl_bridge_exe_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "^0.12.0"
log = { version = "0.4", features = ["std", "serde"] }
serde = {version = "1.0.192", features = ["derive"]}
windows = {version = "*", features = ["Win32", "Win32_System", "Win32_System_Memory", "Win32_Foundation"]}